# Meson_Training

./: .gitignore
01-HelloWorld/: meson.build
02-Library/: meson.build
03-Dependencies/: meson.build
04-Wrap/: meson.build
05-Tests/: meson.build
05-Tests/simplelib/: meson.build
06-Coverage/subprojects/: gtest.wrap.old
07-Generators/: meson.build
08-Configuration-files/: meson.build
